
 - Fix for bug 30843: Introduced properties for IMAP, POP3, and SMTP to specify the SSL cipher suites that will be enabled for SSL connections
 - Fix for bug 32466: Ignore transport credentials on primary mail account update
 
* 2014-05-09 - thorben.betten@open-xchange.com

 - Fix for bug 32017: Keep subfolder information intact for "Public files" (15) folder

* 2014-05-07 - martin.schneider@open-xchange.com

 - Fix for bug 32263: Set transport password instead of IMAP password for account update

* 2014-05-07 - ioannis.chouklis@open-xchange.com

 -Fix for bug 31253: Escape the 'OK' literal at the beginning of each newline with '_OK_'

* 2014-05-05 - lars.hoogestraat@open-xchange.com

 - Fix for bug 32250: Changed yahoo api access to https further added error message on receiving invalid response

* 2014-05-05 - tobias.friedrich@open-xchange.com

 - Fix for bug 33066: Fall back to an empty JSON object on encountered exceptions during deserialization  

* 2014-05-05 - thorben.betten@open-xchange.com

 - Fix for bug 32296: Do not use proxy authentication for external mail accounts

* 2014-05-02 - tobias.friedrich@open-xchange.com

 - Fix for bug 32267: Translate subscription display name when serializing subscription sources
  
* 2014-05-02 - marcus.klein@open-xchange.com

 - Fix for bug 32044: Update the reminder's folderID for all accessing users, if there are no participants. Check additionally permissions
   on the destination folder for all reminder.

* 2014-04-30 - martin.schneider@open-xchange.com

 - Fix for bug 32036: Use 'transport_auth' for setting SMTP credentials usage. 

* 2014-04-29 - thorben.betten@open-xchange.com

 - Fix for bug 31842: Provide human-readable quota information
 - Fix for bug 32239: Filter associated account's address from recipient list

* 2014-04-25 - thorben.betten@open-xchange.com

 - Fix for bug 31684: Prefer look-up by user identifier over look-up by object/folder identifier pair
