@@ -7,3 +7,19 @@ com.openexchange.soap.cxf.baseAddress=
 # Specify whether to hice service list page
 # Default is false
 com.openexchange.soap.cxf.hideServiceListPage=false
+
+# Java platform limits the number of entity expansions that are allowed for a single XML document.
+# Default is 128000, which is considered to be a pretty large number for any real life application.
+# 
+# However, if any application does need to have a higher limit, this property (which maps to 'entityExpansionLimit' system property)
+# can be increased to the desired size. Setting it to 0 (zero) means unlimited.
+#
+# Default value is 128000
+com.openexchange.soap.cxf.entityExpansionLimit=128000
+
+# This is a workaround for the known side-effect in CXF 2.7.x described in CXF-5737 issue (https://issues.apache.org/jira/browse/CXF-5737)
+# The endpoint address gets manipulating after accessing it via multiple aliases.
+# This is disabled by default in the upcoming versions of CXF.
+#
+# Default value is true
+com.openexchange.soap.cxf.disableAddressUpdates=true
